--- a/src/renderer/app/email-form/email-form.component.html
+++ b/src/renderer/app/email-form/email-form.component.html
@@ -7,63 +7,71 @@
 
     <mat-card-content>
       <form class="example-container">
-        <div class="emails-block">
-          <mat-card>
+        <div class="padding-spacer emails-block">
+          <mat-card class="userEmail">
 
             <mat-card-header>
-              <mat-card-subtitle>Reporter</mat-card-subtitle>
+              <mat-card-title>Reporter</mat-card-title>
             </mat-card-header>
-            <p>
-              <mat-form-field>
-                <input name="reporterName" matInput placeholder="Name" [(ngModel)]="reporterName">
-              </mat-form-field>
-            </p>
-            <p>
-              <mat-form-field>
-                <input name="reporterEmail" matInput placeholder="Email" [(ngModel)]="reporterEmail">
-              </mat-form-field>
-            </p>
+            <div class="padding-spacer">
+              <p>
+                <mat-form-field>
+                  <input name="reporterName" matInput placeholder="Name" [(ngModel)]="reporterName">
+                </mat-form-field>
+              </p>
+              <p>
+                <mat-form-field>
+                  <input name="reporterEmail" matInput placeholder="Email" [(ngModel)]="reporterEmail">
+                </mat-form-field>
+              </p>
+            </div>
 
           </mat-card>
-          <mat-card>
+          <mat-card class="userEmail">
             <mat-card-header>
-              <mat-card-subtitle>Receiver</mat-card-subtitle>
+              <mat-card-title>Receiver</mat-card-title>
             </mat-card-header>
-            <p>
-              <mat-form-field>
-                <input name="receiverName" matInput placeholder="Name" [(ngModel)]="receiverName">
-              </mat-form-field>
-            </p>
-            <p>
-              <mat-form-field>
-                <input name="receiverEmail" matInput placeholder="Email" [(ngModel)]="receiverEmail">
-              </mat-form-field>
-            </p>
+
+            <div class="padding-spacer">
+              <p>
+                <mat-form-field>
+                  <input name="receiverName" matInput placeholder="Name" [(ngModel)]="receiverName">
+                </mat-form-field>
+              </p>
+              <p>
+                <mat-form-field>
+                  <input name="receiverEmail" matInput placeholder="Email" [(ngModel)]="receiverEmail">
+                </mat-form-field>
+              </p>
+            </div>
 
           </mat-card>
         </div>
 
 
-        <mat-card>
-          <p>
-            <mat-form-field>
-              <input matInput placeholder="Subject">
-            </mat-form-field>
-          </p>
-          <p class="magic-item button">
-            <mat-form-field>
-              <input matInput placeholder="Status">
-            </mat-form-field>
-            <button mat-mini-fab class="magic-button">
-              <mat-icon aria-label="">add</mat-icon>
-            </button>
-          </p>
-        </mat-card>
+        <div class="padding-spacer">
+          <mat-card>
+            <p>
+              <mat-form-field>
+                <input name="subject" matInput placeholder="Subject" [(ngModel)]="subject">
+              </mat-form-field>
+            </p>
+            <p class="magic-item add-btn">
+              <mat-form-field>
+                <input name="status" matInput placeholder="Status" [(ngModel)]="description">
+              </mat-form-field>
+              <button (click)="buildData()" mat-mini-fab class="magic-button">
+                <mat-icon aria-label="">add</mat-icon>
+              </button>
+            </p>
+          </mat-card>
+        </div>
       </form>
       <mat-divider></mat-divider>
       <p class="textarea">
         <mat-form-field>
-          <textarea rows="10" matInput placeholder="Report"></textarea>
+          <textarea name="reportTextArea" id="reportTextArea" class="mat-display-1" rows="10" matInput placeholder="Report"
+            [(ngModel)]="report"></textarea>
         </mat-form-field>
       </p>
 
@@ -71,7 +79,7 @@
     </mat-card-content>
 
   </mat-card>
-  <p class="button">
-    <button (click)="sendData()" mat-raised-button color="primary">Send</button>
+  <p class="send-btn">
+    <button (click)="sendData()" mat-raised-button color="primary">Send  <mat-icon aria-label="">send</mat-icon></button>
   </p>
 </div>
