--- a/src/renderer/styles.scss
+++ b/src/renderer/styles.scss
@@ -33,13 +33,28 @@
   }
 }
 
-.button {
-  text-align: right;
 
+.add-btn {
+  margin: 15px;
   button {
     width: 50px;
     height: 50px;
-    margin: 15px;
+  }
+}
+
+.send-btn {
+  text-align: right;
+  margin: 15px;
+  button {
+    width: auto;
+    height: 50px;
+    text-align: center;
+    mat-icon {
+      width: 20px;
+      height: 28px;
+      margin-left: 10px
+
+    }
   }
 }
 
@@ -49,9 +64,17 @@
 
 .textarea {
   margin: 25px 15px 0 15px;
-
 }
 
+#reportTextArea {
+	line-height:30px;
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+label.mat-form-field-label { /* Chrome/Opera/Safari */
+  font-family: 'Montserrat', sans-serif !important;
+}
 
 // Material styles override
 
@@ -59,14 +82,32 @@ mat-card-header {
   background: rgba(0,0,0,.10);
   padding: 15px;
 }
+.padding-spacer{
+  padding: 15px;
+}
+
+.userEmail {
+  padding: 0 !important;
+}
 
 mat-card-title {
-  color: rgba(0,0,0,.60);
-  font-family: Arial, serif;
+  color: #333333;
+  font-family: 'Montserrat', sans-serif;
   font-size: 2em !important;
 }
 
+.emails-block {
+
+  mat-card-title {
+    color: #333333;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.5em !important;
+  }
+
+}
+
 mat-card-subtitle {
-  font-family: Arial, serif;
-  font-size: 1.3em;
+  color: rgba(0,0,0,.80);
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.5em;
 }
