--- a/src/renderer/app/email-form/email-form.component.html
+++ b/src/renderer/app/email-form/email-form.component.html
@@ -2,7 +2,7 @@
   <mat-card id="main-container">
     <mat-card-header>
       <mat-card-title>Reports </mat-card-title>
-      <mat-card-subtitle>Send Email report</mat-card-subtitle>
+      <mat-card-subtitle>Send Report - Frazko</mat-card-subtitle>
     </mat-card-header>
 
     <mat-card-content>
